<resources>
    <string name="app_name">DBReference</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sotuvchi">Sotuvchi</string>
    <string name="xaridor">Xaridor</string>
    <string name="buyurtma">Buyurtma</string>
    <string name="sotuvchi_qo_shish">Sotuvchi qo\'shish</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="buyurtma_qo_shish">Buyurtma qo\'shish</string>
    <string name="name1">Name</string>
    <string name="price">Price</string>
    <string name="save1">Save</string>
</resources>