<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/white"
    android:layout_margin="10dp"
    android:orientation="vertical"
    >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sotuvchi_qo_shish"
    android:textSize="25sp"
    android:textColor="@color/black"
    />
    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColorHint="@color/black"
        android:textSize="25sp"
        android:layout_margin="10dp"
        />
    <EditText
        android:id="@+id/edt_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:textSize="25sp"
        android:layout_margin="10dp"
        />
    <EditText
        android:id="@+id/edt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:visibility="gone"
        android:textColorHint="@color/black"
        android:textSize="25sp"
        android:layout_margin="10dp"
        />
    <Button
        android:id="@+id/btn_save"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:text="@string/save"
        android:backgroundTint="@color/teal_200"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        />
</LinearLayout>