<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyurtma_qo_shish"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name1"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner_sotuvchi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinner_xaridor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/save1" />

</LinearLayout>